FIX: Don't break words or whitespace in transcriptions (#116)
closes #116

--- a/classes/inline-example.css
+++ b/classes/inline-example.css
@@ -3,4 +3,5 @@
   display:     inline;
   font-style:  italic;
   user-select: all;
+  word-break:  keep-all;
 }
